# jxta-c

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  autogen.sh  build.xml  configure.in  configure.in.solaris  doxconf  doxconf.in  jxta-config  libjxta.m4
PeerView3/: install.xml  jxta.pc.in  libjxta.m4
PeerView3/jxta.net/: JxtaNET.sln
PeerView3/jxta.net/shell/: AssemblyInfo.cs  Makefile.am  RdvControl.cs  RdvStatus.cs  Search.cs  Shell.cs  WhoAmI.cs
PeerView3/shell/: TestApplication.c  TestApplication.h  groups.h  join.h  jxta_shell_environment.c  jxta_shell_environment.h  jxta_shell_getopt.c  jxta_shell_main.h  jxta_shell_tokenizer.c  kdb.h  leave.c  rdvstatus.h  search.h  talk.h
PeerView3/src/: .cvsignore  EndpointRouter.h  jdlist.c  jdlist.h  jstring.c  jxta.c  jxta.h  jxta_adv_request_msg.h  jxta_advertisement.h  jxta_apa.c  jxta_bidipipe.c  jxta_bidipipe.h  jxta_boot.c  jxta_builtinmodules.c  jxta_bytevector.c  jxta_cache_config_adv.h  jxta_callback.h  jxta_cm.c  jxta_cm.h  jxta_cred.h  jxta_cred_priv.h  jxta_defloader.c  jxta_defloader_private.h  jxta_discovery_config_adv.c  jxta_discovery_service.h  jxta_dq.c  jxta_dq.h  jxta_dr_priv.h  jxta_endpoint_address.c  jxta_endpoint_address.h  jxta_endpoint_config_adv.c  jxta_endpoint_messenger.h  jxta_errno.h  jxta_hashtable.c  jxta_id_priv.h  jxta_id_uuid.c  jxta_id_uuid_priv.h  jxta_lease_response_msg.c  jxta_listener.h  jxta_log.c  (+74 more)
PeerView3/src/jpr/: Makefile.am  jpr.c  jpr_ckcompat.c  jpr_core.h  jpr_types.c
PeerView3/test/: LeaseResponse.xml  Makefile.am  PeerviewPing.xml  PeerviewPong.xml  RA.xml  RdvDiffusion.xml  RelayAdvertisement.xml  apa_adv_test.c  dq_adv_test.c  dummypg_test_private.h  endpoint_stress_test.c  endpoint_test.c  excep_test.c  generateConfigs.sh  hta_adv_test.c  jstring_test.c  jxta_bench_comm.c  jxta_bidipipe_test.c  jxta_client_tunnel.c  jxta_hash_test.c  jxta_id_test.c  jxta_join_test.c  jxta_objecthash_test.c  jxta_pg_test.c  (+19 more)
jxta.net/: Makefile.am  README.txt
jxta.net/src/: Advertisement.cs  AssemblyInfo.cs  ByteStream.cs  Credential.cs  DiscoveryEvent.cs  DiscoveryListener.cs  DiscoveryResponse.cs  DiscoveryResponseMsg.cs  DiscoveryService.cs  EndpointAddress.cs  Errors.cs  ID.cs  IDFactory.cs  InputPipe.cs  JxtaNET.csproj  JxtaNET.dll.config  JxtaObject.cs  JxtaString.cs  JxtaVector.cs  Listener.cs  Log.cs  Makefile.am  MembershipService.cs  Message.cs  MessageElement.cs  Module.cs  ModuleAdvertisement.cs  ModuleClassAdvertisement.cs  ModuleClassID.cs  ModuleSpecID.cs  OutputPipe.cs  Peer.cs  PeerAdvertisement.cs  PeerGroup.cs  PeerGroupAdvertisement.cs  PeerGroupFactory.cs  PeerGroupID.cs  PeerID.cs  PeerView.cs  Pipe.cs  (+8 more)
jxtad/: Makefile.am  jxtad.c
macosx/: Info.plist
qt/: Makefile
shell/: Makefile.am  TestApplication.c  TestApplication.h  cat.c  cat.h  groups.c  groups.h  join.c  join.h  jxta_shell_app_env.c  jxta_shell_app_env.h  jxta_shell_application.c  jxta_shell_application.h  jxta_shell_environment.c  jxta_shell_environment.h  jxta_shell_getopt.c  jxta_shell_getopt.h  jxta_shell_main.c  jxta_shell_main.h  jxta_shell_object.c  jxta_shell_object.h  jxta_shell_tokenizer.c  jxta_shell_tokenizer.h  kdb.c  kdb.h  leave.c  leave.h  monitor.c  monitor.h  peers.c  peers.h  publish.c  publish.h  rdvcontrol.c  rdvcontrol.h  rdvstatus.c  rdvstatus.h  search.c  search.h  talk.c  (+3 more)
src/: EndpointRouter.h  Makefile.am  jdlist.c  jdlist.h  jstring.c  jstring.h  jxta.c  jxta.h  jxta_adv_request_msg.c  jxta_adv_request_msg.h  jxta_adv_response_msg.c  jxta_adv_response_msg.h  jxta_advertisement.c  jxta_advertisement.h  jxta_advertisement_priv.h  jxta_apa.c  jxta_apa.h  jxta_apr.h  jxta_apr.h.in  jxta_bidipipe.c  jxta_bidipipe.h  jxta_boot.c  jxta_builtinmodules.c  jxta_builtinmodules_private.h  jxta_bytevector.c  jxta_bytevector.h  jxta_cache_config_adv.c  jxta_cache_config_adv.h  jxta_callback.c  jxta_callback.h  jxta_cm.c  jxta_cm.h  jxta_cm_prepared_priv.h  jxta_cm_private.h  jxta_constants.c  jxta_constants.h  jxta_cred.c  jxta_cred.h  jxta_cred_null.c  jxta_cred_null.h  (+260 more)
src/jpr/: Makefile.am  apr_thread_pool.c  apr_thread_pool.h  inet_ntop.c  jpr.c  jpr_apr_wrapper.h  jpr_ckcompat.c  jpr_core.h  jpr_errno.h  jpr_excep.c  jpr_excep.h  jpr_excep_proto.h  jpr_priv.h  jpr_setjmp.h  jpr_thread.c  jpr_thread.h  jpr_threadonce.h  jpr_types.c  jpr_types.h
src/jpr/arch/beos/: jpr_threadonce.h
src/jpr/arch/netware/: jpr_threadonce.h
src/jpr/arch/os2/: jpr_threadonce.h
src/jpr/arch/unix/: jpr_threadonce.h
src/jpr/arch/win32/: jpr_threadonce.h
src/unicode/: ConvertUTF.c  ConvertUTF.h  Makefile.am  README.TXT  harness.c
test/: .cvsignore  LeaseRequest.xml  Makefile.am  MetricsAndInstance.patch  PeerviewAddressAssign.xml  PeerviewAddressRequest.xml  PeerviewPing.xml  README  RelayConfig.xml  ResolverQuery.xml  any_adv_test.c  apa.xml  apa_adv_test.c  bidipipe.adv  chat.c  cm_test.c  discovery_request_msg  dq.xml  dq_adv_test.c  dr.xml  dr_adv_test.c  dr_peer.xml  dummypg_test.c  dummypg_test_private.h  endpoint_benchmark.c  endpoint_msg_test.c  endpoint_stress_test.c  endpoint_test.c  excep_test.c  hta.xml  hta_adv_test.c  http_client_test.c  join_test_pga.xml  jstring_test.c  jstring_test.h  jxta_bench_comm.c  jxta_bench_pipe_resolution.c  jxta_bidipipe_test.c  jxta_bytevector_test.c  jxta_client_tunnel.c  (+64 more)
test/messages/: jxta_message_log.output.1014930177957  jxta_message_log.output.1014930178746  jxta_message_log.output.1014930178976  jxta_message_log.output.1014930179205  jxta_message_log.output.1014930179512  jxta_message_log.output.1014930179734  jxta_message_log.output.1014930180042
tutorials/: Makefile.am  PlatformConfig_sample.txt  jxta_20050110.dot  jxta_20050112.dot  jxta_tutorial.h  jxta_tutorial0.c  jxta_tutorial1.c  jxta_tutorial2.c  jxta_tutorial_args.c  jxta_tutorial_args.h  jxta_tutorial_main.c  jxta_tutorial_shared.c  jxta_tutorial_shared.h  shared_tests.c  source_files_guide.txt  tutorial0.txt  tutorial2.txt  tutorial_whisp.txt  tutorials_overview.txt  tutorials_platform_config.txt  whisp.c  whisp.test.xml
win32/: README.txt  jxta.sln
(+175 files in other folders)
