SUBDIRS = jpr 

AM_CPPFLAGS = \
	      -I$(srcdir)/jpr \
	      @APR_CPPFLAGS@ @XML2_CPPFLAGS@ @SQLITE_CPPFLAGS@ 

AM_CFLAGS = -DTARGET_ARCH_OS_PLATFORM=\"$(target)\" @LIBXML2_XPATH_REWRITE_FLAG@ 

lib_LTLIBRARIES = libjxta.la

libjxta_la_LIBADD = \
		    $(top_builddir)/src/jpr/libjpr.la \
		    @APR_LIBS@  @XML2_LIBS@ @SQLITE_LIBS@

libjxta_la_LDFLAGS = -version-info 1:0:0

include_HEADERS = EndpointRouter.h          \
                  jdlist.h                  \
                  jstring.h                 \
                  jxta_advertisement.h      \
                  jxta_apr.h                \
                  jxta_bytevector.h         \
                  jxta_cache_config_adv.h   \
                  jxta_cm.h                 \
                  jxta_cm_prepared_priv.h   \
                  jxta_cred.h               \
                  jxta_debug.h              \
                  jxta_discovery_service.h  \
                  jxta_discovery_config_adv.h \
                  jxta_dq.h                 \
                  jxta_dr.h                 \
                  jxta_endpoint_address.h   \
                  jxta_endpoint_config_adv.h   \
                  jxta_endpoint_messenger.h \
                  jxta_endpoint_service.h   \
                  jxta_em.h                 \
                  jxta_router_service.h     \
                  jxta_errno.h              \
                  jxta.h                    \
                  jxta_hashtable.h          \
                  jxta_hta.h                \
                  jxta_id.h                 \
                  jxta_listener.h           \
                  jxta_mca.h                \
                  jxta_membership_service.h \
                  jxta_message.h            \
                  jxta_mia.h                \
                  jxta_module.h             \
                  jxta_monitor_config_adv.h \
                  jxta_monitor_service.h    \
                  jxta_monitor_msg.h        \
                  jxta_monitor_entry.h      \
                  jxta_monitorconfig.h      \
                  jxta_monpg.h              \
                  jxta_monpg_private.h      \
                  jxta_msa.h                \
                  jxta_object.h             \
                  jxta_object_priv.h        \
                  jxta_object_type.h        \
                  jxta_objecthashtable.h    \
                  jxta_object_ptrwrapper.h  \
                  jxta_pa.h                 \
                  jxta_peergroup.h          \
		  jxta_netpg.h		    \
                  jxta_platformconfig.h     \
                  jxta_peer.h               \
                  jxta_peerview.h           \
                  jxta_peerview_monitor_entry.h \
				  jxta_peerview_pong_msg.h  \
                  jxta_peer_private.h       \
                  jxta_peerinfo_service.h   \
                  jxta_pga.h                \
                  jxta_pipe_adv.h           \
                  jxta_pipe_service.h       \
                  jxta_pipe_service_impl.h  \
                  jxta_rdv.h                \
                  jxta_rdv_service.h        \
                  jxta_rdv_service_provider.h \
				  jxta_rdv_monitor_entry.h	\
                  jxta_resolver_service.h   \
				  jxta_resolver_config_adv.h \
                  jxta_rq.h                 \
                  jxta_rq_callback.h        \
                  jxta_rr.h                 \
                  jxta_rsrdi.h              \
                  jxta_srdi.h               \
                  jxta_srdi_config_adv.h    \
                  jxta_srdi_service.h       \
                  jxta_srdi_service_private.h \
                  jxta_service.h            \
                  jxta_string.h             \
                  jxta_svc.h                \
                  jxta_transport.h          \
                  jxta_tta.h                \
                  jxta_types.h              \
                  jxta_vector.h             \
                  jxta_xml_util.h           \
                  jxta_relaya.h             \
                  jxta_apa.h                \
                  jxta_routea.h             \
                  jxta_relay.h              \
                  jxta_cred_null.h          \
                  jxta_rdv_diffusion_msg.h  \
                  jxta_lease_request_msg.h \
                  jxta_lease_response_msg.h \
                  jxta_adv_request_msg.h \
                  jxta_adv_response_msg.h \
                  jxta_rm.h                 \
                  jxta_test_adv.h           \
                  jxta_transport_http_client.h         \
                  jxta_transport_http_poller.h         \
                  jxta_transport_tcp_connection.h      \
                  jxta_transport_welcome_message.h      \
                  jxta_transport_tcp_private.h         \
                  jxta_tcp_multicast.h                 \
                  jxta_wm.h                            \
                  localconf.h                          \
                  queue.h                              \
                  trailing_average.h		\
		  jxta_log.h			\
		  jxta_bidipipe.h		\
		  jxta_socket_tunnel.h \
		  jxta_rdv_config_adv.h \
                  jxta_query.h \
		  jxta_sql.h \
		  jxta_test_adv.h \
		  jxta_proffer.h \
                  jxta_range.h \
		  jxta_callback.h \
		  jxta_constants.h \
		  jxta_version.h		\
		  jxta_qos.h


libjxta_la_SOURCES = jstring.c                      \
                     jxta_bytevector.c              \
                     jxta_string.c                  \
                     jxta_object.c                  \
                     jxta_object_type.c             \
                     jdlist.c                       \
                     jxta_cred.c                    \
                     jxta_cred_null.c               \
                     jxta_id.c                      \
                     jxta_id_jxta.c                 \
                     jxta_id_uuid.c                 \
                     jxta_pa.c                      \
                     jxta_rq.c                      \
                     jxta_rq_callback.c             \
                     jxta_rr.c                      \
                     jxta_rsrdi.c                   \
                     jxta_srdi.c                    \
                     jxta_dq.c                      \
                     jxta_dr.c                      \
                     jxta_dr_priv.h                 \
                     jxta_pga.c                     \
                     jxta_mia.c                     \
                     jxta_rdv.c                     \
                     jxta_svc.c                     \
                     jxta_message.c                 \
                     queue.c                        \
					 jxta_resolver_config_adv.c		\
                     jxta_resolver_service.c        \
                     jxta_discovery_config_adv.c    \
                     jxta_discovery_service.c       \
                     jxta_peerinfo_service.c        \
                     jxta_advertisement.c           \
		     jxta_advertisement_priv.h      \
                     jxta_rdv_service.c             \
                     jxta_rdv_service_provider.c    \
                     jxta_rdv_service_adhoc.c       \
                     jxta_rdv_service_client.c      \
                     jxta_rdv_service_server.c      \
                     jxta_rdv_lease_options.h       \
                     jxta_rdv_lease_options.c       \
					 jxta_rdv_monitor_entry.c		\
                     jxta_endpoint_config_adv.c     \
                     jxta_endpoint_service.c        \
                     jxta_endpoint_service_priv.h   \
                     jxta_endpoint_address.c        \
                     jxta_em.c                      \
                     jxta_membership_service.c      \
                     jxta_membership_service_null.c \
                     jxta_monitor_config_adv.c      \
                     jxta_monitorconfig.c           \
                     jxta_monitor_service.c         \
                     jxta_monpg.c                   \
                     jxta_monitor_msg.c             \
                     jxta_monitor_entry.c           \
                     jxta_test_adv.c                \
                     jxta_transport.c               \
                     jxta_transport_http.c          \
                     jxta_transport_http_client.c   \
                     jxta_transport_welcome_message.c   \
                     jxta_transport_tcp.c           \
                     jxta_transport_tcp_connection.c \
                     jxta_transport_http_poller.c    \
                     jxta_tcp_message_packet_header.c \
                     jxta_tcp_multicast.c           \
                     jxta_hta.c                     \
                     jxta_tta.c                     \
                     jxta_xml_util.c                \
                     jxta_stdpg.c                   \
                     jxta_netpg.c                   \
                     jxta_platformconfig.c          \
                     jxta_peer.c                    \
                     jxta_peerview.c                \
		     jxta_peerview_priv.h           \
                     jxta_peerview_monitor_entry.c \
                     jxta_peerview_ping_msg.c       \
                     jxta_peerview_ping_msg.h       \
                     jxta_peerview_pong_msg.c       \
                     jxta_peerview_pong_msg.h       \
                     jxta_peerview_address_request_msg.c       \
                     jxta_peerview_address_request_msg.h       \
                     jxta_peerview_address_assign_msg.c       \
                     jxta_peerview_address_assign_msg.h       \
                     jxta_peergroup.c               \
                     jxta_service.c                 \
                     jxta_module.c                  \
                     jxta_objecthashtable.c         \
                     jxta_object_ptrwrapper.c       \
                     jxta_defloader.c               \
                     jxta_builtinmodules.c          \
                     jxta_vector.c                  \
                     jxta_hashtable.c               \
                     jxta_rdv_config_adv.c          \
                     jxta_mca.c                     \
                     jxta_resolver_service_ref.c    \
                     jxta_discovery_service_ref.c   \
                     jxta_peerinfo_service_ref.c    \
                     jxta_msa.c                     \
                     jxta_debug.c                   \
                     jxta_rm.c                      \
                     jxta_router_client.c           \
                     jxta_rdv_diffusion_msg.c       \
                     jxta_lease_request_msg.c       \
                     jxta_lease_response_msg.c      \
                     jxta_adv_request_msg.c       \
                     jxta_adv_response_msg.c      \
                     jxta_listener.c                \
                     jxta_wm.c                      \
                     jxta_pipe_adv.c                \
                     trailing_average.c             \
                     jxta_pipe_service.c            \
                     jxta_wire_service.c            \
                     jxta_unipipe_service.c         \
                     jxta_piperesolver_impl.c       \
                     jxta_piperesolver_msg.c        \
                     jxta_cache_config_adv.c        \
                     jxta_cm.c                      \
                     jxta_relaya.c                  \
                     jxta_apa.c                     \
                     jxta_routea.c                  \
                     jxta_relay.c                   \
                     jxta.c                         \
                     jxta_cm_private.h               \
                     jxta_discovery_service_private.h     \
                     jxta_membership_service_private.h    \
                     jxta_module_private.h                \
                     jxta_stdpg_private.h                 \
                     jxta_netpg_private.h                 \
                     jxta_peergroup_private.h             \
                     jxta_peerinfo_service_private.h      \
                     jxta_rdv_service_private.h           \
                     jxta_resolver_service_private.h      \
                     jxta_rdv_service_provider_private.h  \
                     jxta_service_private.h               \
                     jxta_transport_private.h             \
                     jxta_builtinmodules_private.h        \
                     jxta_defloader_private.h             \
                     jxta_transport_tcp_private.h         \
                     jxta_cred_priv.h                     \
                     jxta_tcp_message_packet_header.h	  \
                     jxta_piperesolver_msg.h		  \
                     jxta_id_priv.h                       \
                     jxta_private.h                       \
		     jxta_log_priv.h			  \
		     jxta_log.c				\
		     jxta_bidipipe.c			\
		     jxta_socket_tunnel.c               \
                     jxta_query.c                       \
		     jxta_srdi_service.c                \
		     jxta_srdi_service_ref.c            \
                     jxta_srdi_config_adv.c             \
		     jxta_proffer.c                     \
                     jxta_range.c                       \
		     jxta_util_priv.h                   \
		     jxta_util_priv.c                   \
		     jxta_callback.c                    \
		     jxta_constants.c			\
			 jxta_version.c				\
		     jxta_qos.c
